--- a/project/docker/nginx.conf
+++ b/project/docker/nginx.conf
@@ -1,6 +1,6 @@
 user nginx;
 worker_processes 1;
-error_log /var/log/nginx/error.log warn;
+error_log /dev/stderr warn;
 
 events {
     worker_connections 1024;
