--- a/project/Jenkinsfile
+++ b/project/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
       shouldNotFlatten: false,
 
       regexpFilterText: '$ref',
-      regexpFilterExpression: 'refs/heads/' + BRANCH_NAME
+      regexpFilterExpression: 'refs/heads/' 
     )
   }
     environment {
