--- a/project/Jenkinsfile
+++ b/project/Jenkinsfile
@@ -1,43 +1,65 @@
+node {
+    git url: 'https://github.com/jenkinsci/git-tag-message-plugin'
+    env.GIT_TAG_NAME = gitTagName()
+    env.GIT_TAG_MESSAGE = gitTagMessage()
+}
+
+/** @return The tag name, or `null` if the current commit isn't a tag. */
+String gitTagName() {
+    commit = getCommit()
+    if (commit) {
+        desc = sh(script: "git describe --tags ${commit}", returnStdout: true)?.trim()
+        if (isTag(desc)) {
+            return desc
+        }
+    }
+    return null
+}
+
+/** @return The tag message, or `null` if the current commit isn't a tag. */
+String gitTagMessage() {
+    name = gitTagName()
+    msg = sh(script: "git tag -n10000 -l ${name}", returnStdout: true)?.trim()
+    if (msg) {
+        return msg.substring(name.size()+1, msg.size())
+    }
+    return null
+}
+
+String getCommit() {
+    return sh(script: 'git rev-parse HEAD', returnStdout: true)?.trim()
+}
+
+@NonCPS
+boolean isTag(String desc) {
+    match = desc =~ /.+-[0-9]+-g[0-9A-Fa-f]{6,}$/
+    result = !match
+    match = null // prevent serialisation
+    return result
+}
+
+
 
 pipeline {
     agent {
         label "agent-1"
     } 
-  triggers {
-    GenericTrigger(
-      genericVariables: [
-        [key: 'ref', value: '$.ref']
-      ],
-
-      causeString: 'Triggered on $ref',
-
-
-      tokenCredentialId: '',
-
-      printContributedVariables: true,
-      printPostContent: true,
-
-      silentResponse: false,
-
-      shouldNotFlatten: false,
-
-      regexpFilterText: '$ref',
-      regexpFilterExpression: 'refs/heads/' 
-    )
-  }
-    environment {
-        registry = "alwx1753/devops-project"
-        registryCredential = 'dockerhub'
-        dockerImage = ''
-        gitTag = '' 
-    }
     stages {
-        stage('Checkout') {
+        stage('Build') {
             steps {
-                script {
-                    echo "tags: ${ref}"
-                }
-
+                sh 'make package'
+            }
+        }
+        stage('Test') {
+            steps {
+                sh 'make check'
+            }
+        }
+        stage('Deploy') {
+            when { tag "release-*" }
+            steps {
+                echo 'Deploying only because this commit is tagged...'
+                sh 'make deploy'
             }
         }
     }
