--- a/project/Jenkinsfile
+++ b/project/Jenkinsfile
@@ -47,7 +47,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                echo "${GIT_TAG_NAME}"
+                echo "${env.GIT_TAG_NAME}"
             }
         }
 
