--- a/project/Jenkinsfile
+++ b/project/Jenkinsfile
@@ -10,6 +10,7 @@ pipeline {
         stage('Build') {
             steps {
                 checkout scm
+                echo "test"
                 sh "git describe --tags --abbrev=0 HEAD"
             }
         }
