added jenkins , myapp and monitoring in k8s

--- a/project/k8s/jenkins/service.yaml
+++ b/project/k8s/jenkins/service.yaml
@@ -10,9 +10,10 @@ metadata:
 spec:
   selector:
     app: jenkins-server
-  type: NodePort
+  # type: NodePort
+  type: LoadBalancer
   ports:
-    - port: 8080
+    - port: 32000
       name: jenkins-service
       targetPort: 8080
       # nodePort: 32000
