--- a/project/k8s/monitoring.yml
+++ b/project/k8s/monitoring.yml
@@ -1,19 +1,39 @@
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: ingressname
+#   annotations:
+#     nginx.ingress.kubernetes.io/use-regex: "true"
+# spec:
+#  ingressClassName: nginx
+#  rules:
+#   - host: grafana.domen.ruls
+#     http:
+#       paths:
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: stable-grafana
+#             port:
+#               number: 80
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingressname
   annotations:
-    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
- ingressClassName: nginx
- rules:
-  - host: grafana.domen.ru
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: stable-grafana
-            port:
-              number: 80
+  ingressClassName: nginx
+  rules:
+    - host: grafana.domen.ru
+      http:
+        paths:
+          - pathType: Prefix
+            backend:
+              service:
+                name: stable-grafana
+                port: 
+                  number: 80
+            path: /
