--- a/project/k8s/myapp.yml
+++ b/project/k8s/myapp.yml
@@ -29,10 +29,11 @@ metadata:
 spec:
   ports:
     - name: web
-      port: 80
+      port: 32001
       targetPort: 80
-      nodePort: 30080
+      # nodePort: 30080
   selector:
     app: myapp
-  type: NodePort
+  # type: NodePort
+  type: LoadBalancer
 
