--- a/project/Jenkinsfile
+++ b/project/Jenkinsfile
@@ -53,11 +53,11 @@ pipeline {
             steps{
                 script{
                     dir('project/k8s'){
-                        kubeconfig(credentialsId: 'TokenForKuber', serverUrl: 'https://158.160.38.130') {
+                        // kubeconfig(credentialsId: 'TokenForKuber', serverUrl: 'https://158.160.38.130') {
                             // sh "sed -i 's|image:.*|image: ${dockerImage}:${taglatest}|' project/k8s/myapp.yml"
-                            sh 'kubectl get pod -n jenkins'
-                            sh 'kubectl apply -f myapp.yml -f ngress.yml -n jenkins'
-                        }
+                        sh 'kubectl get pod -n jenkins'
+                        sh 'kubectl apply -f myapp.yml -f ngress.yml -n jenkins'
+                        // }
 
                     }
 
