--- a/project/k8s/myapp/ingress.yml
+++ b/project/k8s/myapp/ingress.yml
@@ -1,19 +1,19 @@
----
+# ---
 
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: myapp-ingress
-spec:
-  ingressClassName: nginx
-  rules:
-    - host: app.test.com
-      http:
-        paths:
-          - pathType: Prefix
-            path: /
-            backend:
-              service:
-                name: myapp
-                port:
-                  number: 80
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: myapp-ingress
+# spec:
+#   ingressClassName: nginx
+#   rules:
+#     - host: app.test.com
+#       http:
+#         paths:
+#           - pathType: Prefix
+#             path: /
+#             backend:
+#               service:
+#                 name: myapp
+#                 port:
+#                   number: 80
