--- a/project/Jenkinsfile
+++ b/project/Jenkinsfile
@@ -38,7 +38,7 @@ pipeline {
                         sh "sed -i 's|image:.*|image: ${latest_docker_image}|' project/k8s/myapp/myapp.yml"
                         // sh "sed -i 's|image:.*|image: ${dockerImage}:${taglatest}|' project/k8s/myapp/myapp.yml"
                         docker.withRegistry( '', registryCredential ) {
-                            dockerImage.push("${gitTag}")
+                            dockerImage.push("${taglatest}")
                         }
                     }
                     else {
