--- a/project/Jenkinsfile
+++ b/project/Jenkinsfile
@@ -74,10 +74,13 @@ node('agent-1') {
         script {
             sh "sed -i 's|image:.*|image: latest|' project/k8s/myapp/myapp.yml"
 
-            
-            docker.withRegistry(credentialsId: 'docker_cred') {
+            withDockerRegistry(credentialsId: 'docker_cred') {
+
                 dockerImage.push("latest")
             }
+            // docker.withRegistry(credentialsId: 'docker_cred') {
+            //     dockerImage.push("latest")
+            // }
         }
     }
 
