--- a/project/Jenkinsfile
+++ b/project/Jenkinsfile
@@ -4,6 +4,7 @@ pipeline {
         label "agent-1"
     } 
     environment {
+        DOCKER_REGISTRY = 'https://index.docker.io/v1/'
         registry = "alwx1753/devops-project"
         registryCredential = 'dockerhub'
         dockerImage = ''
